Fix auth button spacing

--- a/frontend/src/components/header_desktop/header_desktop.scss
+++ b/frontend/src/components/header_desktop/header_desktop.scss
@@ -12,7 +12,7 @@
   margin: 0 auto;
   display: grid;
   align-items: center;
-  grid-template-columns: 1fr 3fr 3fr 2fr;
+  grid-template-columns: 1fr 4fr 4fr 2fr;
   //grid-template-rows: 2rem 2rem;
   grid-template-rows: 2rem 2rem;
   grid-row-gap: 0.25rem;
@@ -42,8 +42,10 @@
     grid-column: 4 / 5;
     display: grid;
     grid-auto-flow: column;
-    grid-gap: 0.5rem;
+
+    grid-gap: 1.5rem;
     place-items: center;
+    justify-self: end;
     font-size: 0.75rem;
     user-select: none;
 
@@ -55,6 +57,7 @@
 
     &__login {
       color: darkColor(medium);
+      justify-self: end;
       @media (hover: hover) {
         &:hover {
           color: $primary-color;
@@ -63,6 +66,7 @@
     }
 
     &__signup {
+      justify-self: start;
       border: solid $primary-color 0.08rem;
       border-radius: 50rem;
       color: $primary-color;
@@ -182,7 +186,7 @@
   .header-d {
     .auth-btns {
       border: none;
-      grid-gap: 0;
+      grid-gap: 0.25rem;
       padding: 0 0.25rem;
       &__create {
         //display: none;
